--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
                             <h3>&#129321<strong>Result</strong>&#129321</h3>
                                 <div class="row">
                                     <div class="column">
-                                        <img src="./images/mc2.1.JPG" style="width:100%">
+                                        <img src="./images/mc2.1.JPG" alt="MCModels1" style="width:100%">
                                     </div>
                                     <div class="column">
-                                        <img src="./images/mc2.2.JPG" style="width:100%">
+                                        <img src="./images/mc2.2.JPG" alt="MCModels2" style="width:100%">
                                     </div>
                                 </div>
                         </div>
