finalised profile website

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
+        <!-- rain animation -->
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script> 
 
@@ -32,6 +33,8 @@
             }
             rain();
         </script>
+
+        <!-- navigation bar -->
         <nav id="navbar">
             <div class="section">
                 <ul>
@@ -45,6 +48,7 @@
             </div>
         </nav>
 
+        <!-- profile -->
         <div class="nat-profile">
             <img src="images/natPiano.jpg" alt="Nathaniel Piano" width="300">
         </div>
@@ -71,6 +75,7 @@
             </div>
         </header>
         
+        <!-- hobbies -->
         <div id="Hobbies"></div>
         <header id="hobby-header">
             <div class="hobby-list">
@@ -95,6 +100,7 @@
             </div>
         </header>
 
+        <!-- Piano -->
         <div id="Piano"></div>
         <header id="piano-header">
             <div class = "piano-list">
@@ -138,6 +144,7 @@
             </div>
         </header>
 
+        <!-- Minecraft -->
         <div id="Minecraft"></div>
         <header id="minecraft-header">
             <div class="minecraft-class">
@@ -180,6 +187,7 @@
         </header>
         </div>
 
+        <!-- Contact -->
         <div id="Contact"></div>
         <header id="contact-header">
             <div class="contact-class">
@@ -205,8 +213,6 @@
             </a>
 
         </header>
-
-
 
         <div style="margin-top:10px"></div>
     </body>
