finalised profile website and headers

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <p>
                     <div class="list">
                         <ul>
-                            <li>Piano (Learnt it for too long) &#127929</li>
+                            <li>Piano (Learnt it for over a decade) &#127929</li>
                             <br>
                             <li>Urban Exploring &#127974</li>
                             <br>
