final edits, text and extra pictures

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <!-- rain animation -->
+        <!-- rain animation, through a JS style -->
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script> 
 
@@ -56,7 +56,13 @@
                
         <div id="About-Me"></div>
         <header id="profile-header">
+            <br>
+            <div class="yuzu">
+                <img src="images/yuzu.JPG" alt="Yuzu Sorbet" width="300">
+            </div>
+            <br>
             <div class="profile">
+                <p>"Had Gelato Messina before I went to Gacha+ Cafe" &#128523</p>
                 <br>
                 <h2>A Bit About Me</h2>
                 <div class="details">
@@ -77,7 +83,13 @@
         <!-- hobbies -->
         <div id="Hobbies"></div>
         <header id="hobby-header">
+            <br>
+            <div class="coast">
+                <img src="images/coast.JPG" alt="Bondi Pic" width="300" height="300">
+            </div>
+            <br>
             <div class="hobby-list">
+                <p>"I should coast walk more often, perhaps make it an official Past-Time"</p>
                 <br>
                 <h2><strong>Hobbies/Pastimes</strong></h2>
                 <p>
@@ -102,7 +114,13 @@
         <!-- Piano -->
         <div id="Piano"></div>
         <header id="piano-header">
+            <br>
+            <div class="pose">
+                <img src="images/steinway.JPG" alt="steinway" width="300">
+            </div>
+            <br>
             <div class = "piano-list">
+                <p>"This is not my Steinways and likely will never own one" &#128579</p>
                 <br>
                 <h2><strong>My Piano Repetoire</strong></h2>
                 <p>
@@ -144,11 +162,16 @@
         <!-- Minecraft -->
         <div id="Minecraft"></div>
         <header id="minecraft-header">
+            <br>
+            <div class="skindex">
+                <img src="images/skindex.png" alt="Skindex Logo" width="800">
+            </div>
+            <br>
             <div class="minecraft-class">
-                <br>
                 <h2><strong>Some Minecraft Designs</strong></h2>
                 <p>
                     <div class="fact">
+                        <p>As you could likely tell, Skindex is where I customise my character ideas. Whilst you can get anything pre-made here, it's encouraging when you create your own characters</p>
                         <p><strong>Fun Fact: </strong>As of 26th August, I do not even have a Minecraft Account, however there is nothing wrong with planning and conceptualising &#128513</p>
                         <p>Let me know if you like me to make something!</p>
                         <div class="mc">
