--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="hobby-list">
                 <p>"I should coast walk more often, perhaps make it an official Past-Time"</p>
                 <br>
-                <h2><strong>Hobbies/Pastimes</strong></h2>
+                <h2><strong>Hobbies</strong></h2>
                 <p>
                     <div class="list">
                         <ul>
