--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class = "piano-list">
                 <p>"This is not my Steinways and likely will never own one" &#128579</p>
                 <br>
-                <h2><strong>My Piano Repetoire</strong></h2>
+                <h2><strong>My Piano Repertoire</strong></h2>
                 <p>
                     <div class="piano">
                         <p>Fantasie-Impromptu Opus 66 - Frederic Chopin (1810 - 1849)</p>
