--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <ul>
                     <li><a href="#About-Me">A Bit About Me</a></li>
                     <li><a href="#Hobbies">Hobbies</a></li>
-                    <li><a href="#Piano">My Piano Repetoire</a></li>
+                    <li><a href="#Piano">My Piano Repertoire</a></li>
                     <li><a href="#Minecraft">Some Minecraft Designs</a></li>
                     <li><a href="#Contact">Contact Me</a></li>
                 </ul>
